#UPDATE#添加若干代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
 
         <activity android:name=".AspectActivity"
             android:launchMode="singleTask">
+        </activity>
 
+        <activity android:name=".BottomSheetActivity"
+            android:launchMode="singleTask">
 
         </activity>
     </application>
