--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,22 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'walle'
 
 android {
     compileSdkVersion 28
+    signingConfigs {
+        release {
+            storeFile file('../exercise')
+            storePassword '123456'
+            keyAlias 'androidExercise'
+            keyPassword '123456'
+        }
+    }
+
     defaultConfig {
         applicationId "com.wrl.exercise"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -22,7 +32,23 @@ android {
     dexOptions {
         javaMaxHeapSize "4g"
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
+
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+//walle {
+//    // 指定渠道包的输出路径
+//    apkOutputFolder = new File("${project.getBuildDir()}/渠道包")
+//    // 定制渠道包的APK的文件名称
+//    apkFileNameFormat = '${packageName}-${channel}-v${versionName}.${versionCode}-${buildType}.apk'
+//    // 渠道&额外信息配置文件，与channelFile互斥
+//    configFile = new File("${project.getRootDir()}/config.json")
+//}
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -35,6 +61,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'org.aspectj:aspectjrt:1.8.9'
+    implementation 'com.github.wendux:DSBridge-Android:3.0-SNAPSHOT'
+    //    implementation 'com.meituan.android.walle:library:1.1.6'
+    implementation(name: 'sspsdk-release', ext: 'aar')
+    implementation files('libs/autolayout.jar')
+    implementation 'com.android.support:design:28.0.0'
 }
 repositories {
     mavenCentral()
@@ -44,6 +75,7 @@ repositories {
 import org.aspectj.bridge.IMessage
 import org.aspectj.bridge.MessageHandler
 import org.aspectj.tools.ajc.Main
+
 final def log = project.logger
 final def variants = project.android.applicationVariants
 variants.all { variant ->
