--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,12 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
         google()
         jcenter()
         maven {
@@ -15,6 +21,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'org.aspectj:aspectjtools:1.8.9'
+//        classpath 'com.meituan.android.walle:plugin:1.1.6'
 //        classpath 'org.aspectj:aspectjtools:1.8.13'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,12 +30,19 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'https://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
         google()
         jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url 'https://jitpack.io' }
         
     }
 }
